deployment/kubernetes/ingress/gymhive-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gymhive-ingress
  namespace: gymhive
  annotations:
    networking.gke.io/managed-certificates: gymhive-managed-cert-nipio
    networking.gke.io/v1beta1.FrontendConfig: gymhive-frontendconfig
spec:
  rules:
    - host: gymhive.34.8.235.214.nip.io
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
